Deleting useless function

--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -110,15 +110,7 @@
     "    if set(gen2List(genoma)) == GOAL:\n",
     "        return True\n",
     "    else:\n",
-    "        return False\n",
-    "\n",
-    "def compute_w(genome):\n",
-    "    list = []\n",
-    "    for i, g in enumerate(genome):\n",
-    "        if g:\n",
-    "            list += list_of_lists[i]\n",
-    "    return len(list)\n",
-    "    "
+    "        return False    "
    ]
   },
   {
