--- a/lab3/1_my_solution.ipynb
+++ b/lab3/1_my_solution.ipynb
@@ -92,13 +92,6 @@
     "        num_objects = random.randint(1, state.rows[row])\n",
     "    return Nimply(row, num_objects)\n",
     "\n",
-    "def shortest_row(state: Nim) -> Nimply:\n",
-    "    row = min((x for x in enumerate(state.rows) if x[1] > 0), key=lambda y: y[1])[0]\n",
-    "    if(state.rows[row] > k):\n",
-    "       num_objects = random.randint(1, k)\n",
-    "    else:\n",
-    "       num_objects = state.rows[row]\n",
-    "    return Nimply(row, num_objects)\n",
     "\n",
     "def my_strategy(state: Nim) -> Nimply:\n",
     "    possible_moves = [(r, o) for r, c in enumerate(state.rows) for o in range(1, c + 1)]\n",
@@ -108,12 +101,12 @@
     "            row_num = random.randint(0, len(state.rows) - 1)\n",
     "            if state.rows[row_num] > 0:\n",
     "                obj = max([i[1] for i in possible_moves if i[0] == row_num], key=lambda i:i)\n",
-    "                if obj > k:\n",
-    "                    obj = k\n",
+    "                if obj > state.k:\n",
+    "                    obj = state.k\n",
     "                ply = Nimply(row_num, obj)\n",
     "    else: \n",
     "        ply = None\n",
-    "        while ply == None or ply[1] > k:\n",
+    "        while ply == None or ply[1] > state.k:\n",
     "            ply = Nimply(*possible_moves[random.randint(0, len(possible_moves) - 1)])\n",
     "    return ply\n",
     "\n",
