--- a/lab3/3_minmax.ipynb
+++ b/lab3/3_minmax.ipynb
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 3: minmax"
+    "# Task 3.3: minmax"
    ]
   },
   {
@@ -127,21 +127,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function  minimax( node, depth, maximizingPlayer ) is\n",
-    "#     if depth = 0 or node is a terminal node then\n",
-    "#         return the heuristic value of node\n",
-    "#     if maximizingPlayer then\n",
-    "#         value := −∞\n",
-    "#         for each child of node do\n",
-    "#             value := max( value, minimax( child, depth − 1, FALSE ) )\n",
-    "#         return value\n",
-    "#     else (* minimizing player *)\n",
-    "#         value := +∞\n",
-    "#         for each child of node do\n",
-    "#             value := min( value, minimax( child, depth − 1, TRUE ) )\n",
-    "#         return value\n",
-    "\n",
-    "\n",
     "def minmax(state: Nim, depth: int, max_turn: bool):\n",
     "    if sum(o > 0 for o in state.rows) == 0:     \n",
     "        return -1 if max_turn else 1 \n",
@@ -164,82 +149,6 @@
     "            tmp.nimming(ply)\n",
     "            scores.append(minmax(tmp, depth - 1, max_turn=True))\n",
     "        return min(scores)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Roba che funziona"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _minmax(state: Nim, max_turn: bool):\n",
-    "    if state == 0:                          # state è quanti obj rimangono per quella linea\n",
-    "        return -1 if max_turn else 1\n",
-    "\n",
-    "    \n",
-    "    possible_new_states = [                 # possibili stati rimuovendo al massimo 3 obj. Qua deve agire la depth\n",
-    "        state - take for take in range(1, state + 1) if take <= state\n",
-    "    ]\n",
-    "    if max_turn:\n",
-    "        scores = [\n",
-    "            _minmax(new_state, max_turn=False)\n",
-    "            for new_state in possible_new_states\n",
-    "        ]\n",
-    "        return max(scores)\n",
-    "    else:\n",
-    "        scores = [\n",
-    "            _minmax(new_state, max_turn=True)\n",
-    "            for new_state in possible_new_states\n",
-    "        ]\n",
-    "        return min(scores)\n",
-    "\n",
-    "# def minmax_strategy(state):\n",
-    "#     for r, o in enumerate(state.rows):           # per tutte le righe ancora attive\n",
-    "#         if o:\n",
-    "#             for move in range(1, o + 1):\n",
-    "#                 new_state = o - move\n",
-    "#                 score = minmax(new_state, max_turn=False)\n",
-    "#                 if score > 0:\n",
-    "#                     return Nimply(r, o + new_state)\n",
-    "    \n",
-    "\n",
-    "# # print(minmax_strategy(nim))\n",
-    "              \n",
-    "                 \n",
-    "# won = 0\n",
-    "# for m in range(NUM_MATCHES):\n",
-    "#     nim = Nim(NIM_SIZE, k)\n",
-    "#     player = 0\n",
-    "#     while nim:\n",
-    "#         if player == 0:\n",
-    "#             ply = pure_random(nim)\n",
-    "#         else:\n",
-    "#             ply = minmax_strategy(nim)\n",
-    "#         nim.nimming(ply)\n",
-    "#         player = 1 - player\n",
-    "#     winner = 1 - player\n",
-    "#     if winner == 1:\n",
-    "#         won += 1\n",
-    "# print(won / NUM_MATCHES *100)\n",
-    "\n",
-    "# POCO UTILE\n",
-    "\n",
-    "# for take in range(1, state + 1):\n",
-    "#     new_state = state - take\n",
-    "#     score.append([minmax(new_state, max_turn=False), new_state])\n",
-    "#     print(f\"Move from {state} to {new_state}: {minmax(new_state, max_turn=False)}\")\n",
-    "# print()\n",
-    "# for i in range(len(score)):  \n",
-    "#     if score[i][0] > 0:\n",
-    "#         print(f\"Best score is {score[i][0]} (from {state} to {score[i][1]})\")\n",
-    "\n"
    ]
   },
   {
@@ -270,23 +179,6 @@
     "\n",
     "logging.getLogger().setLevel(logging.DEBUG)\n",
     "\n",
-    "def Davide_strategy(state: Nim) -> Nimply:\n",
-    "    possible_moves = [(r, o) for r, c in enumerate(state.rows) for o in range(1, c + 1)]\n",
-    "    if any([True for i in possible_moves if i[1] > 1]):\n",
-    "        obj = 0\n",
-    "        while(obj == 0):\n",
-    "            row_num = random.randint(0, len(state.rows) - 1)\n",
-    "            if state.rows[row_num] > 0:\n",
-    "                obj = max([i[1] for i in possible_moves if i[0] == row_num], key=lambda i:i)\n",
-    "                if obj > k:\n",
-    "                    obj = k\n",
-    "                ply = Nimply(row_num, obj)\n",
-    "    else: \n",
-    "        ply = None\n",
-    "        while ply == None or ply[1] > k:\n",
-    "            ply = Nimply(*possible_moves[random.randint(0, len(possible_moves) - 1)])\n",
-    "    return ply\n",
-    "\n",
     "def pure_random(state: Nim) -> Nimply: \n",
     "    row = random.choice([r for r, c in enumerate(state.rows) if c > 0])\n",
     "    if(state.rows[row] > state.k):\n",
@@ -294,7 +186,6 @@
     "    else:\n",
     "        num_objects = random.randint(1, state.rows[row])\n",
     "    return Nimply(row, num_objects)\n",
-    "\n",
     "\n",
     "def minmax_strategy(state, depth=3, max_turn=False):\n",
     "    possible_moves = [(r, o) for r, c in enumerate(state.rows) for o in range(1, c + 1) if state.k is None or o <= state.k]\n",
@@ -308,8 +199,6 @@
     "    else:                                 \n",
     "        return pure_random(state)\n",
     "              \n",
-    "\n",
-    "\n",
     "def shortest_row(state: Nim) -> Nimply: # take the shortest row and select random elements if the matches > k otherwise close the row\n",
     "    row = min((x for x in enumerate(state.rows) if x[1] > 0), key=lambda y: y[1])[0]\n",
     "    if(state.rows[row] > state.k):\n",
@@ -319,32 +208,14 @@
     "    return Nimply(row, num_objects)\n",
     "\n",
     "\n",
-    "# won = 0\n",
-    "# for m in range(NUM_MATCHES):\n",
-    "#     nim = Nim(NIM_SIZE, k)\n",
-    "#     player = 0\n",
-    "#     while nim:\n",
-    "#         if player == 0:\n",
-    "#             ply = minmax_strategy(nim, 3, False) \n",
-    "#         else:\n",
-    "#             ply = pure_random(nim)\n",
-    "#         nim.nimming(ply)\n",
-    "#         player = 1 - player\n",
-    "#     winner = 1 - player\n",
-    "#     if winner == 0:\n",
-    "#         won += 1\n",
-    "# winrate = won / NUM_MATCHES *100\n",
-    "# logging.info(f\"NUM_MATCHES : {NUM_MATCHES} - ratio: {winrate}\")\n",
-    "\n",
-    "\n",
-    "def evaluate(shortest_row: Callable, my_strategy: Callable, NUM_MATCHES : int) -> list:\n",
+    "def evaluate(pure_random: Callable, my_strategy: Callable, NUM_MATCHES : int) -> list:\n",
     "    w = [0, 0]\n",
     "    turn = [0, 1]\n",
     "    for t in turn:\n",
     "        if t == 0:\n",
-    "            opponent = (my_strategy, shortest_row)\n",
+    "            opponent = (my_strategy, pure_random)\n",
     "        else:\n",
-    "            opponent = (shortest_row, my_strategy)\n",
+    "            opponent = (pure_random, my_strategy)\n",
     "        for m in range(NUM_MATCHES):\n",
     "            nim = Nim(NIM_SIZE, k)\n",
     "            player = 0\n",
@@ -360,7 +231,7 @@
     "    return w\n",
     "\n",
     "for n_m in [10, 50, 100]:\n",
-    "    w = evaluate(optimal_strategy, minmax_strategy, n_m)\n",
+    "    w = evaluate(pure_random, minmax_strategy, n_m)\n",
     "    logging.info(f\"NUM_MATCHES : {n_m} - ratio as player1: {w[0]*100}, ratio as player2: {w[1]*100}\")\n"
    ]
   }
