Adding other info

--- a/lab3/3_minmax.ipynb
+++ b/lab3/3_minmax.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,22 +160,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:NUM_MATCHES : 10 - ratio as player1: 70.0, ratio as player2: 90.0\n",
-      "INFO:root:NUM_MATCHES : 50 - ratio as player1: 88.0, ratio as player2: 86.0\n",
-      "INFO:root:NUM_MATCHES : 100 - ratio as player1: 89.0, ratio as player2: 89.0\n"
+      "INFO:root:NUM_MATCHES : 10 - ratio as player1: 100.0, ratio as player2: 0.0\n",
+      "INFO:root:NUM_MATCHES : 50 - ratio as player1: 100.0, ratio as player2: 0.0\n",
+      "INFO:root:NUM_MATCHES : 100 - ratio as player1: 100.0, ratio as player2: 0.0\n"
      ]
     }
    ],
    "source": [
     "k = 100\n",
-    "NIM_SIZE = 4\n",
+    "NIM_SIZE = 3\n",
     "\n",
     "logging.getLogger().setLevel(logging.DEBUG)\n",
     "\n",
@@ -187,7 +187,7 @@
     "        num_objects = random.randint(1, state.rows[row])\n",
     "    return Nimply(row, num_objects)\n",
     "\n",
-    "def minmax_strategy(state, depth=3, max_turn=False):\n",
+    "def minmax_strategy(state, depth=20, max_turn=False):\n",
     "    possible_moves = [(r, o) for r, c in enumerate(state.rows) for o in range(1, c + 1) if state.k is None or o <= state.k]\n",
     "    scores = []\n",
     "    for ply in possible_moves:\n",
@@ -213,9 +213,9 @@
     "    turn = [0, 1]\n",
     "    for t in turn:\n",
     "        if t == 0:\n",
-    "            opponent = (my_strategy, pure_random)\n",
+    "            opponent = (my_strategy, optimal_strategy)\n",
     "        else:\n",
-    "            opponent = (pure_random, my_strategy)\n",
+    "            opponent = (optimal_strategy, my_strategy)\n",
     "        for m in range(NUM_MATCHES):\n",
     "            nim = Nim(NIM_SIZE, k)\n",
     "            player = 0\n",
@@ -231,7 +231,7 @@
     "    return w\n",
     "\n",
     "for n_m in [10, 50, 100]:\n",
-    "    w = evaluate(pure_random, minmax_strategy, n_m)\n",
+    "    w = evaluate(optimal_strategy, minmax_strategy, n_m)\n",
     "    logging.info(f\"NUM_MATCHES : {n_m} - ratio as player1: {w[0]*100}, ratio as player2: {w[1]*100}\")\n"
    ]
   }
