--- a/lab3/3_minmax.ipynb
+++ b/lab3/3_minmax.ipynb
@@ -208,7 +208,7 @@
     "    return Nimply(row, num_objects)\n",
     "\n",
     "\n",
-    "def evaluate(pure_random: Callable, my_strategy: Callable, NUM_MATCHES : int) -> list:\n",
+    "def evaluate(optimal_strategy: Callable, my_strategy: Callable, NUM_MATCHES : int) -> list:\n",
     "    w = [0, 0]\n",
     "    turn = [0, 1]\n",
     "    for t in turn:\n",
