adding Alternative section to task 3.2

--- a/lab3/2_GA.ipynb
+++ b/lab3/2_GA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,14 +257,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:The best strategy is GabriG_strategy with 98.0% winrate (fitness)\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [8], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m logging\u001b[39m.\u001b[39mgetLogger()\u001b[39m.\u001b[39msetLevel(logging\u001b[39m.\u001b[39mDEBUG)\n\u001b[1;32m----> 3\u001b[0m strat, fitness \u001b[39m=\u001b[39m play()\n\u001b[0;32m      4\u001b[0m logging\u001b[39m.\u001b[39minfo(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe best strategy is \u001b[39m\u001b[39m{\u001b[39;00mstrat\u001b[39m.\u001b[39m\u001b[39m__qualname__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m with \u001b[39m\u001b[39m{\u001b[39;00mfitness\u001b[39m}\u001b[39;00m\u001b[39m% winrate (fitness)\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn [7], line 16\u001b[0m, in \u001b[0;36mplay\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m     p2 \u001b[39m=\u001b[39m tournament(population)\n\u001b[0;32m     15\u001b[0m     o \u001b[39m=\u001b[39m uniform_cross_over(p1\u001b[39m.\u001b[39mgenome, p2\u001b[39m.\u001b[39mgenome, strategy)          \n\u001b[1;32m---> 16\u001b[0m f \u001b[39m=\u001b[39m compute_fitness(o, strategy)                                      \n\u001b[0;32m     17\u001b[0m fitness_log\u001b[39m.\u001b[39mappend((g \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m, f))                     \n\u001b[0;32m     18\u001b[0m offspring\u001b[39m.\u001b[39mappend(Individual(o, f))                 \n",
+      "Cell \u001b[1;32mIn [5], line 92\u001b[0m, in \u001b[0;36mcompute_fitness\u001b[1;34m(genome, strategy)\u001b[0m\n\u001b[0;32m     90\u001b[0m \u001b[39mwhile\u001b[39;00m nim:\n\u001b[0;32m     91\u001b[0m     \u001b[39mif\u001b[39;00m player \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m---> 92\u001b[0m         ply \u001b[39m=\u001b[39m pure_random(nim)\n\u001b[0;32m     93\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     94\u001b[0m         ply \u001b[39m=\u001b[39m strategy[s](nim)\n",
+      "Cell \u001b[1;32mIn [5], line 49\u001b[0m, in \u001b[0;36mpure_random\u001b[1;34m(state)\u001b[0m\n\u001b[0;32m     47\u001b[0m num_objects \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     48\u001b[0m \u001b[39mwhile\u001b[39;00m num_objects \u001b[39m==\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39mor\u001b[39;00m num_objects \u001b[39m>\u001b[39m k:    \n\u001b[1;32m---> 49\u001b[0m     num_objects \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39mrandint(\u001b[39m1\u001b[39m, state\u001b[39m.\u001b[39;49mrows[row])                     \n\u001b[0;32m     50\u001b[0m \u001b[39mreturn\u001b[39;00m Nimply(row, num_objects)\n",
+      "Cell \u001b[1;32mIn [3], line 12\u001b[0m, in \u001b[0;36mNim.rows\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__str__\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m     10\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39m<\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(\u001b[39mstr\u001b[39m(_) \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_rows) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m>\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m---> 12\u001b[0m \u001b[39m@property\u001b[39m\n\u001b[0;32m     13\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrows\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mtuple\u001b[39m:\n\u001b[0;32m     14\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mtuple\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_rows)\n\u001b[0;32m     16\u001b[0m \u001b[39m@property\u001b[39m\n\u001b[0;32m     17\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mk\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mint\u001b[39m:\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -273,6 +281,135 @@
     "\n",
     "strat, fitness = play()\n",
     "logging.info(f\"The best strategy is {strat.__qualname__} with {fitness}% winrate (fitness)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Alternative "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the best winrate is 68.0 with paramter: alpha 0.3 - beta 0.7249999999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 100\n",
+    "\n",
+    "\n",
+    "def reweigth_prob(g):\n",
+    "    actual_sum = sum(g)\n",
+    "    for i in range(len(g)):\n",
+    "        if actual_sum == 0:\n",
+    "            break\n",
+    "        g[i] = g[i] / actual_sum\n",
+    "    return g\n",
+    "\n",
+    "def uniform_cross_over(g1, g2):\n",
+    "    new_genoma = dict()\n",
+    "    new_genoma['alpha'] = g1['alpha']\n",
+    "    new_genoma['beta'] = g2['beta']\n",
+    "    return new_genoma\n",
+    "\n",
+    "def mutation(g): \n",
+    "    tweak = .05                       \n",
+    "    point = random.random() \n",
+    "    if point < .25:\n",
+    "        if g['alpha'] + tweak < 0.6:\n",
+    "             g['alpha'] += tweak\n",
+    "        else:\n",
+    "             g['alpha'] -= tweak\n",
+    "    if  0.25 <= point < .5:\n",
+    "        if g['alpha'] - tweak > 0:\n",
+    "             g['alpha'] -= tweak\n",
+    "        else:\n",
+    "             g['alpha'] += tweak\n",
+    "    tweak = tweak*1.5\n",
+    "    if  0.5 <= point < .75:\n",
+    "        if g['beta'] + tweak < 1:\n",
+    "             g['beta'] += tweak\n",
+    "        else:\n",
+    "             g['beta'] -= tweak\n",
+    "    if  0.75 <= point < 1:\n",
+    "        if g['beta'] - tweak > 0:\n",
+    "             g['beta'] -= tweak\n",
+    "        else:\n",
+    "             g['beta'] += tweak\n",
+    "    return g\n",
+    "\n",
+    "\n",
+    "def build_strategy(state: Nim, g: namedtuple) -> Nimply: \n",
+    "    if g['alpha'] <= .2:\n",
+    "        row = max((x for x in enumerate(state.rows)), key=lambda y: y[1])[0]\n",
+    "    if g['alpha'] > .2 and g['alpha'] <= .4:\n",
+    "        row = min((x for x in enumerate(state.rows) if x[1] > 0), key=lambda y: y[1])[0]\n",
+    "    if g['alpha'] <= .6:\n",
+    "        row = random.choice([r for r, c in enumerate(state.rows) if c > 0])\n",
+    "    if g['beta'] <= .25:\n",
+    "        objs = state.rows[row]\n",
+    "    if g['beta'] > .25 and g['beta'] <= .50:\n",
+    "        objs = 1\n",
+    "    if g['beta'] > .50 and g['beta'] <= .75:\n",
+    "        objs = state.rows[row]//2\n",
+    "    if g['beta'] <= 1:\n",
+    "        objs = random.randint(1, state.rows[row])\n",
+    "    return Nimply(row, objs)\n",
+    "\n",
+    "\n",
+    "def create_population(): \n",
+    "   population = list()\n",
+    "   for genome in [{\"alpha\": .3, \"beta\": .5} for _ in range(POPULATION_SIZE)]:    \n",
+    "      population.append(Individual(genome, compute_fitness(genome))) \n",
+    "   return population\n",
+    "\n",
+    "def compute_fitness(genome):   \n",
+    "    s =  max(enumerate(genome), key=lambda x: x[1])[0]                     \n",
+    "    won = 0\n",
+    "    for m in range(NUM_MATCHES):\n",
+    "        nim = Nim(NIM_SIZE, k)\n",
+    "        player = 0\n",
+    "        while nim:\n",
+    "            if player == 0:\n",
+    "                ply = pure_random(nim)\n",
+    "            else:\n",
+    "                ply = build_strategy(nim, genome)\n",
+    "            nim.nimming(ply)\n",
+    "            player = 1 - player\n",
+    "        winner = 1 - player\n",
+    "        if winner == 1:\n",
+    "            won += 1\n",
+    "    return won / NUM_MATCHES\n",
+    "\n",
+    "\n",
+    "population = create_population()\n",
+    "fitness_log = [(0, i.fitness) for i in population]  \n",
+    "for g in range(NUM_GENERATIONS):\n",
+    "    offspring = list()\n",
+    "    for i in range(OFFSPRING_SIZE):\n",
+    "        if random.random() < GENETIC_OPERATOR_RANDOMNESS:                         \n",
+    "            p = tournament(population)                  \n",
+    "            o = mutation(p.genome)                    \n",
+    "        else:                                          \n",
+    "            p1 = tournament(population)                 \n",
+    "            p2 = tournament(population)\n",
+    "            o = uniform_cross_over(p1.genome, p2.genome)          \n",
+    "        f = compute_fitness(o)                                      \n",
+    "        fitness_log.append((g + 1, f))                     \n",
+    "        offspring.append(Individual(o, f))                 \n",
+    "    population += offspring    \n",
+    "    population = sorted(population, key=lambda i: i[1], reverse=True)[:POPULATION_SIZE]\n",
+    "best_ind = population[0]\n",
+    "print(f\"the best winrate is {best_ind[1]*100} with paramter: alpha {best_ind[0]['alpha']} - beta {best_ind[0]['beta']}\")"
    ]
   }
  ],
